# FastDataBroker

./: .flake8  .gitignore  ADMIN_DASHBOARD_README.md  ALL_SDK_TESTS_WORKING.md  API_REFERENCE.md  ARCHITECTURE.md  BINARY_DATA_SUPPORT.py  CI_CD_GITHUB_ACTIONS_SETUP.md  CLEANUP_SUMMARY.md  CLUSTERING_IMPLEMENTATION_GUIDE.md  CLUSTER_CLIENT.py  COMPARE_BROKERS_IMPLEMENTATION.py  COMPLETE_PROJECT_SUMMARY.md  COMPREHENSIVE_BENCHMARK.py  CONSUMER_CONNECTION_DETAILED.md  CONSUMER_CONNECTION_GUIDE.py  Cargo.toml  DASHBOARD_SETUP_GUIDE.md  DEPLOYMENT.md  DOCUMENTATION_CONSOLIDATED.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  Dockerfile  FASTDATABROKER_ARCHITECTURE.md  FASTDATABROKER_USAGE_GUIDE.md  FDB_SYSTEM_ARCHITECTURE_SCALING_GUIDE.md  GETTING_STARTED_GUIDE.md  IMPLEMENTATION_GUIDE_V3.1.md  KAFKA_RABBITMQ_COMPARISON.py  LICENSE  LIVE_PERFORMANCE_BENCHMARK.py  LIVE_STREAM_API.py  LIVE_STREAM_INTEGRATION.py  LIVE_STREAM_QUICK_REFERENCE.txt  MULTI_SERVER_ARCHITECTURE.py  MULTI_SERVER_BENCHMARK.py  MULTI_SERVER_DEPLOYMENT_GUIDE.py  NAMING_MIGRATION.md  NPM_PUBLISHING_SETUP.md  PARALLEL_PROCESSING_IMPLEMENTATION.md  (+69 more)
.github/workflows/: docker-publish.yml  go-publish.yml  npm-publish.yml  nuget-publish.yml  pypi.yml
admin-api/: .env.example  API_SPECIFICATION.md  BUILD_TEST_DEPLOY.md  Cargo.toml  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  FILE_INVENTORY.md  GETTING_STARTED.md  INTEGRATION_TESTING_GUIDE.md  PRODUCTION_DEPLOYMENT.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES.md  START_HERE.txt  TEST_FIXES_FINAL.md  TEST_RESULTS_FINAL.md  TEST_RESULTS_v0.1.0.md  TROUBLESHOOTING_AND_CONFIG.md  admin.db  docker-compose.yml  run_all_tests.ps1  test_all_endpoints.ps1  test_api.ps1  test_simple.ps1  test_suite.ps1
admin-api/src/: auth.rs  broker.rs  cache.rs  config.rs  db.rs  error.rs  json_store.rs  main.rs  middleware.rs  models.rs
admin-api/src/handlers/: cluster.rs  health.rs  info.rs  mod.rs  notifications.rs  system.rs  tenant.rs
admin-api/tenants/: tenant_3ca9a647-84a4-48fa-827c-4d535e7d7692.json  tenant_8827f8af-e9a0-43b5-9b3a-6a35880a39f7.json  tenant_9a809789-95f2-4688-8f60-85a5c31730ed.json  tenant_ef94268f-9968-4519-b1d1-88668d53724a.json
admin-api/tenants/tenant_279f6063-ff07-48b1-a6ab-f8b238d20b2e/.secrets/: 2d22d8e2-120d-433c-9994-cc6126e0245d.json
admin-api/tenants/tenant_9a809789-95f2-4688-8f60-85a5c31730ed/.secrets/: 98c0ac7b-09b3-442a-8e39-0fcbc15f9391.json
admin-api/tenants/tenant_ef94268f-9968-4519-b1d1-88668d53724a/.secrets/: 0db47f43-e91f-4e26-94b8-6e1a894955e6.json
admin-api/tenants/tenant_f747062e-ed9b-4adf-a5ff-6bbf15f815f4/.secrets/: 995872a4-748c-4b5e-a346-f0e669d23a4b.json
admin-api/tenants/tenant_fd23dece-8441-448d-bbad-141a9727a68e/.secrets/: 3257a14a-5d04-45f6-90c7-c269d6e6fa09.json
assets/css/: dashboard.css
assets/js/: dashboard.js
docs/: ARCHITECTURE.md  CLUSTERING.md  DEPLOYMENT.md  PERFORMANCE.md  README.md  SDK_USAGE.md  TESTING.md  TEST_STRUCTURE.md
kubernetes/: 01-namespace-config.yaml  02-statefulset-service.yaml  03-rbac-network.yaml  04-autoscaling-monitoring.yaml
load_tests/: load_test.sh  locustfile.py
python/: .gitignore  README.md  fastdatabroker_sdk.py  setup.py  test_fastdatabroker_sdk.py  test_fastdatabroker_sdk_comprehensive.py  test_multitenancy.py
python/rst_queue/: __init__.py
scripts/: run_all_tests.sh  run_tests.py
sdks/: README.md
sdks/csharp/: .gitignore  FastDataBrokerQuicClient.cs  FastDataBrokerSDK.cs  FastDataBrokerSDK.csproj  FastDataBrokerSDK_MultiTenant.cs  MULTI_TENANT_GUIDE.md  README.md  TestSDK.cs
sdks/go/: .gitignore  MULTI_TENANT_GUIDE.md  README.md  fastdatabroker.go  fastdatabroker_comprehensive_test.go  fastdatabroker_multitenancy.go  fastdatabroker_multitenancy_test.go  fastdatabroker_quic_psk.go  fastdatabroker_test.go  go.mod  postoffice.go  tenant_quic_client.go  tenant_quic_test.go  test_sdk.go
sdks/java/: .gitignore  FastDataBrokerComprehensiveTest.java  FastDataBrokerQuicClient.java  FastDataBrokerSDK.java  FastDataBrokerSDKTest.java  FastDataBrokerSDK_MultiTenant.java  MULTI_TENANT_GUIDE.md  PostOfficeSDK.java  README.md  TestSDK.java  pom.xml
sdks/javascript/: .eslintrc.json  .gitignore  .npmignore  MULTI_TENANT_GUIDE.md  README.md  fastdatabroker.ts  fastdatabroker_multitenancy.ts  fastdatabroker_quic_psk.ts  jest.config.js  package-lock.json  package.json  tsconfig.json
sdks/python/: README.md  benchmark_performance.py  benchmark_results.json  fastdatabroker_quic_psk.py  fastdatabroker_sdk.py  test_sdk.py
src/: batch_processor.rs  caching.rs  clustering.rs  connection_pool.rs  lib.rs  object_pool.rs  persistent_queue.rs  priority_queue.rs  queue.rs  serialization.rs
src/admin/: api.rs  handlers.rs  logs.rs  metrics.rs  mod.rs
src/auth/: handlers.rs  lib.rs  middleware.rs  mod.rs
src/config/: app_settings.rs  background_workers.rs  config_manager.rs  in_memory_cache.rs  mod.rs  startup_config.rs  tenant.rs  tenant_json.rs
src/distribution/: mod.rs  multi_region.rs  tenant_storage.rs
src/logging/: async_logger.rs  atomic_logger.rs  mod.rs  ring_buffer.rs
src/models/: fixed.rs  mod.rs
src/notifications/: email.rs  mod.rs  push.rs  webhook.rs  websocket.rs
src/observability/: metrics.rs  mod.rs  tracing.rs
src/resilience/: circuit_breaker.rs  mod.rs  retry_policies.rs
src/security/: encryption.rs  mod.rs  psk_auth.rs  quic_auth.rs
src/services/: delivery.rs  ingestion.rs  mod.rs  mod_new.rs  mod_old.rs  priority.rs  routing.rs  (+1 more)
terraform/: infrastructure.tf  outputs.tf  provider.tf  variables.tf
test_priority_queue/: db
test_priority_queue_remove/: db
tests/: test_async_queue.rs  test_atomic_logger_integration.rs  test_benchmarks.rs  test_clustering.rs  test_concurrency.rs  test_error_handling.rs  test_integration.rs  test_models.rs  test_multitenancy.rs  test_persistent_queue.rs  test_priority_queue.rs  test_tenant_access.rs
(+31 files in other folders)
