[package]
name = "fastdatabroker"
version = "0.1.16"
edition = "2021"
authors = ["Suraj Kalbande <suraj202923@gmail.com>"]
license = "LicenseRef-FDB-DevTest-Only"
description = "Advanced data broker for distributed message delivery with QUIC protocol support"
repository = "https://github.com/suraj202923/fastdatabroker"
homepage = "https://github.com/suraj202923/fastdatabroker"
readme = "README.md"
keywords = ["fastdatabroker", "databroker", "queue", "quic", "async", "crossbeam"]
categories = ["data-structures", "concurrency", "network-programming"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# QUIC Protocol (Phase 1 Focus)
quinn = "0.11"
rustls = "0.21"
rustls-pemfile = "2.0"

# Message queue foundations
crossbeam = { version = "0.8", features = ["crossbeam-queue", "crossbeam-channel"] }
num_cpus = "1.16"

# Persistence & Storage
sled = "0.34"

# Python bindings
pyo3 = { version = "0.28.2", features = ["extension-module"] }

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
smallvec = { version = "1.11", features = ["union", "const_generics"] }
dashmap = { version = "5.5", features = ["serde"] }
parking_lot = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Observability & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = { version = "0.13", features = ["process"], optional = true }

# Crypto
sha2 = "0.10"
hex = "0.4"
ring = "0.17"
aes-gcm = "0.10"

# Resilience & Circuit Breaker (Phase 5)
governor = "0.7"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Optional dependencies for features
mail-send = { version = "0.4", optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
lettre = { version = "0.11", optional = true }
async-trait = "0.1"
indexmap = "2.0"
futures = "0.3.32"

[features]
default = ["quic", "notifications"]
quic = []
notifications = ["mail-send", "tokio-tungstenite", "reqwest", "lettre"]
metrics = ["prometheus"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# SIMD optimization for benchmarks
[profile.bench]
inherits = "release"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "queue_example"
path = "src/bin/example.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

# QUIC Server binary
[[bin]]
name = "fastdatabroker-server"
path = "src/bin/server.rs"

# Temporarily disabled - needs fixing
# [[bin]]
# name = "fdb-cli"
# path = "src/bin/cli.rs"

